# cs381-portfolio

./: .gitmodules  README.md
as6/: CMakeLists.txt  README.md  as6.cpp
assets/models/: nj.glb  pe.glb
